Feat: update sort functionality
Feat: update sort functionality

--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -1,5 +1,6 @@
 @import './common_style';
 @import './header_style';
+@import './procurement';
 
 // ---------------- Auth ------------------------------------------------------
 .login_auth_wrap { 
