--- a/src/assets/scss/customstyle/_header_style.scss
+++ b/src/assets/scss/customstyle/_header_style.scss
@@ -149,3 +149,24 @@ body[data-sidebar-size="md"],body[data-sidebar-size="sm"]{
     }
 }
 // -------------------------- compact view -------------------------------------------
+// -------------------------- Small view -------------------------------------------
+body[data-sidebar-size=sm] {
+    .vertical-menu #sidebar-menu{
+        > ul {
+            > li{
+                > a{
+                    font-size: 13px;
+                    text-align: center;
+                    svg{
+                        margin: 0 auto 4px;
+                    }
+                }
+                &:hover {
+                    > ul{
+                        top: 0;
+                    }
+                }
+            }
+        }
+    }
+}
