--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -52,4 +52,129 @@
             }
         }
     }
+    .table_wrap {
+        table{
+            td{
+                &:not(:last-child){
+                    min-width: 130px;
+                }
+            }
+        }
+    }
+}
+.tf_top_breadcrumb_rate_wrap {
+    border-radius: 12px;
+    border: 1px solid $neutral_2;
+    background: $white;
+    margin: 20px 0;
+    padding: 18px;
+}
+.tf_box_wrap {
+    padding-top: 18px;
+    margin-top: 18px;
+    border-top: 1px solid #E5E7EB;
+    gap: 30px;
+    .red_text,.green_text {
+        @include font($font-weight-medium,14px,normal,$danger_7);
+        padding-right: 16px;
+        position: relative;
+        margin: 0 0 2px 5px;
+        &::before{
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 3px;
+            width: 14px;
+            height: 14px;
+            background: url('../../images/icons/less_rate.svg') no-repeat;
+        }
+    }
+    .green_text{
+        color: $success_7;
+        &::before{
+            background-image: url('../../images/icons/more_rate.svg');
+        }
+    }
+    .box_title {
+        @include font($font-weight-normal,14px,normal,$neutral_5);
+        margin-bottom: 14px;
+    }
+    .sh_box{
+        position: relative;                        
+        &:not(:last-child){
+            &::before{
+                content: '';
+                position: absolute;
+                right: -14px;
+                top: 0;
+                height: 58px;
+                width: 1px;
+                background: #E5E7EB;
+            }
+        }
+        .sh_inquiry_rate {
+            @include font(700,20px,normal,$neutral_8);   
+            display: flex;      
+            align-items: flex-end;
+        }
+    }
+}
+
+.freight_filter_wrap {
+    .label{
+        @include font(600,16px,normal,$neutral_8);   
+    }
+    .right_actions_wrap {
+        gap: 8px
+    }
+    .search_form{
+        form{
+            input{
+                @include font($font-weight-normal,14px,normal,$neutral_8);   
+                border-radius: 12px;
+                border: 1px solid $neutral_3;
+                background: $white;
+                padding: 9px 10px 9px 38px;
+                width: 323px;
+                &::placeholder{
+                    color: $neutral_4;
+                }
+            }
+            button{
+                position: absolute;
+                top: 8px;
+                left: 12px;
+                font-size: 18px;
+                padding: 0;
+                line-height: 1;
+                color: $neutral_8;
+            }
+        }
+    }
+    .filter_wrap, .upload_wrap {
+        button {
+            border-radius: 8px;
+            border: 1px solid $neutral_3;
+            box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
+            padding: 8px 12px;
+            height: 38px;
+        }
+    }
+    .upload_wrap{
+        button{
+            @include font($font-weight-medium,14px,normal,$neutral_8);  
+            img{
+                margin-right: 4px;
+            }
+        }
+    }
+    .add_btn{
+        button{
+            @include button;
+            i{
+                font-size: 20px;
+                margin-right: 7px;
+            }
+        }
+    }
 }
