--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -281,7 +281,7 @@
 
 // Enlarge menu
 body[data-sidebar-size="sm"] {
-    min-height: 1000px;
+    // min-height: 1000px;
 
     .main-content {
         margin-left: $sidebar-collapsed-width;
@@ -307,6 +307,8 @@ body[data-sidebar-size="sm"] {
         position: absolute;
         width: $sidebar-collapsed-width !important;
         z-index: 5;
+        bottom: auto;
+        min-height: 100%;
 
         .simplebar-mask,
         .simplebar-content-wrapper {
@@ -358,12 +360,13 @@ body[data-sidebar-size="sm"] {
                             height: 20px;
                             width: 20px;
                             margin-left: 6px;
+                            display: block;
                         }
 
-                        span {
-                            display: none;
-                            padding-left: 25px;
-                        }
+                        // span {
+                        //     display: none;
+                        //     padding-left: 25px;
+                        // }
 
                         &.has-arrow {
                             &:after {
@@ -375,7 +378,7 @@ body[data-sidebar-size="sm"] {
                     &:hover {
                         > a {
                             position: relative;
-                            width: calc(190px + #{$sidebar-collapsed-width});
+                            // width: calc(190px + #{$sidebar-collapsed-width});
                             color: $sidebar-menu-item-color;
                             background-color: #F3F4F6;
                             // background-color: $sidebar-bg;
