--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -83,6 +83,40 @@ ul { padding: 0; margin: 0; list-style: none; }
                 }
             }
         }
+        .dropdown-menu {
+            border-radius: 12px;
+            background: $white;
+            box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.20);
+            padding: 0;
+            min-width: 190px;
+            .dropdown-item{
+                @extend .flex-center;
+                justify-content: space-between;
+                @include font(500,16px,normal,$neutral_8);
+                padding: 13px 16px;
+                &:not(:last-child){
+                    border-bottom: 1px solid $neutral_2;
+                }
+            }
+        }
+        .switch_wrap{
+            .form-check {
+                padding: 0;
+                width: 36px;
+                height: 20px;
+                .form-check-input {
+                    margin: 0;
+                    width: 36px;
+                    height: 20px;
+                    background-color: $danger_7;
+                    border: 0;
+                    background-image: url("../../images/icons/white_switch_dot.svg");
+                    &:checked{
+                        background-color: $primary_7;
+                    }
+                }
+            }
+        }
     }
 }
 .common_dropdown{
