--- a/src/assets/scss/customstyle/_header_style.scss
+++ b/src/assets/scss/customstyle/_header_style.scss
@@ -166,6 +166,15 @@ body[data-sidebar-size=sm] {
                         top: 0;
                     }
                 }
+                > ul{
+                    top: 0;
+                    // li {
+                    //     ul{
+                    //         margin: 0 !important;
+                    //         top: 0;
+                    //     }
+                    // }
+                }
             }
         }
     }
