--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -308,7 +308,7 @@ body[data-sidebar-size="sm"] {
         width: $sidebar-collapsed-width !important;
         z-index: 5;
         bottom: auto;
-        min-height: 100%;
+        min-height: calc(100% - $header-height);
 
         .simplebar-mask,
         .simplebar-content-wrapper {
