--- a/src/assets/scss/structure/_topbar.scss
+++ b/src/assets/scss/structure/_topbar.scss
@@ -154,7 +154,7 @@ body[data-bs-theme ="dark"] {
 .page-content {
     // padding: calc(#{$header-height} + #{$grid-gutter-width}) calc(#{$grid-gutter-width} * 0.75) $footer-height calc(#{$grid-gutter-width} * 0.75);
     padding: calc(#{$header-height} + #{$grid-gutter-width}) calc(#{$grid-gutter-width} * 0.75) 20px calc(#{$grid-gutter-width} * 0.75);
-    min-height: 400px;
+    min-height: 100vh;
 }
 
 .header-item {
