Feat: update quotation search

--- a/src/assets/scss/_mixin.scss
+++ b/src/assets/scss/_mixin.scss
@@ -22,3 +22,9 @@
         color: $neutral_4;
     }
 }
+
+@mixin appearance {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
+}
